trunk/Archive2/1f/0b30de2dbe8e6b/output
main.cpp:9:23: error: invalid constructor; you probably meant 'vec2<T> (const vec2<T>&)'
  vec2(vec2<T> original):
                       ^
